# makicheck

./: Cargo.toml
src/: main.rs
