[package]
name = "makicheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
mongodb = "2.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"]}

[dependencies.serenity]
version = "0.11"
default-features=false
features = ["cache", "rustls_backend", "http", "utils", "builder", "gateway", "model", "client"]